# Warper

./: .gitignore  LICENSE  Makefile.am  README.md  Warper.cscope_file_list  battleSystem.c  battleSystem.h  configure.ac  crankFile.c  crankFile.h  crankGraphics.c  crankGraphics.h  crankMain.c  crankMain.h  crankUtility.c  crankUtility.h  csCurl.c  csCurl.h  csFile.c  csFile.h  csGraphics.c  csGraphics.h  csIO.c  csIO.h  csInput.c  csInput.h  csMain.c  csMain.h  csUtility.c  csUtility.h  cutsceneMaker.c  cutsceneMaker.h  main.c  mapMaker.c  mapMaker.h  package.json  warper.c  warper.c.save-failed  warper.h  warperCutscene.c  (+6 more)
CoSprite/: csCurl.c  csCurl.h  csGraphics.c  csGraphics.h  csInput.c  csMap.c  csMap.h  csUtility.c  csUtility.h
assets/: testCutscene.txt  testWizCutscene.txt
assets/cutscenes/: testCutscene.txt
